<resources>
    <string name="app_name">Kcards</string>
    <string name="app_description">Language flash cards</string>

    <string name="deck">Deck</string>
    <string name="card">Card</string>

    <!-- navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="dictionary">Dictionary</string>
    <string name="public_string">Public</string>
    <string name="favorites">Favorites</string>

    <!-- action items -->
    <string name="settings">Settings</string>
    <string name="make_public">Make Public</string>
    <string name="make_private">Make Private</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="swap">Swap</string>
    <string name="shuffle">Shuffle</string>
    <string name="reset_progress">Reset Progress</string>
    <string name="practice">Practice</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>

    <!-- sort items -->
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="created">Created</string>
    <string name="updated">Updated</string>

    <!-- general ctas -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>

    <!-- deck create/edit dialog -->
    <string name="deck_of_cards">Deck of Cards</string>
    <string name="deck_name_input_title">Deck Name</string>
    <string name="deck_name_input_hint">Give this deck a name</string>
    <string name="deck_description_input_title">Deck Description</string>
    <string name="deck_description_input_hint">Give this deck a description</string>

    <!-- card create/edit dialog -->
    <string name="card_front_input_hint">Front of the card</string>
    <string name="card_back_input_hint">Back of the card</string>

    <!-- deck deletion dialog -->
    <string name="are_you_sure">Are You Sure?</string>
    <plurals name="you_have_x_many_cards">
        <item quantity="one">You will lose the %s card in this deck.</item>
        <item quantity="other">You will lose the %s cards in this deck.</item>
    </plurals>

    <!-- progress reset dialog -->
    <string name="deck_reset_progress">This will reset progress for all cards in this deck.</string>

    <!-- toasts -->
    <string name="no_cards_to_practice">Add cards to practice deck</string>
    <string name="deck_must_have_name">Deck must have a name</string>
    <string name="card_must_have_front">Card must have a front</string>
    <string name="deck_saved">Deck Saved</string>
    <string name="card_saved">Card Saved</string>

    <plurals name="card_count">
        <item quantity="one">1 Card</item>
        <item quantity="other">%s Cards</item>
    </plurals>

    <!-- settings -->
    <string name="main_language">Main Language</string>
    <string name="secondary_language">Secondary Language</string>
    <!-- e.g. App Version: 1.0 (1) -->
    <string name="app_version_text">App Version: %1$s (%2$s)</string>
    <!-- e.g. Login ID: Fwa0Fp7kbchQw8WfwN79j4Yn8bd2 -->
    <string name="settings_login_id">Login ID: %1$s</string>
    <!-- e.g. 9 more for debug -->
    <string name="settings_debug_clicks">%1$d more for debug</string>
    <string name="settings_debug_set">Now debug mode!</string>

    <!-- deck public/private -->
    <string name="deck_is_public">Deck is now public!</string>
    <string name="deck_is_private">Deck is now private!</string>
    <string name="deck_make_private_message">This will remove the deck from the public deck list.</string>

    <!-- deck favorites -->
    <string name="favorites_added">Added to favorites!</string>
    <string name="favorites_removed">Removed from favorites!</string>

    <!-- text to speech dialog -->
    <string name="text_to_speech_dialog_title">Language Not Supported</string>
    <string name="text_to_speech_dialog_message">Would you like to continue to the system settings to install this language?</string>

    <!-- date displays -->
    <string name="created_at">Created %s</string>
    <string name="updated_at">Updated %s</string>

</resources>