<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_practice"
        android:icon="@drawable/ic_playlist_play_white_48dp"
        android:orderInCategory="100"
        android:title="@string/practice"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_cloud_download_white_48dp"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_shuffle"
        android:icon="@drawable/ic_shuffle_white_48dp"
        android:orderInCategory="100"
        android:title="@string/shuffle"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_public_private"
        android:icon="@drawable/ic_cloud_upload_white_48dp"
        android:orderInCategory="100"
        android:title="@string/make_public"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_reset_progress"
        android:orderInCategory="100"
        android:title="@string/reset_progress"
        app:showAsAction="never"/>
</menu>