<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_folder_black_48dp"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_public"
            android:icon="@drawable/ic_folder_shared_black_48dp"
            android:title="@string/public_string"/>
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_folder_special_black_48dp"
            android:title="@string/favorites"/>
        <!-- TODO trello.com/c/eV2b4Gru
        <item
            android:id="@+id/nav_dictionary"
            android:icon="@drawable/ic_translate_black_48dp"
            android:title="@string/dictionary"/>
        -->
    </group>

</menu>